<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的信用卡</string>
    <string name="menu_settings">Settings</string>
    <string name="edit">编辑</string>
    <string name="CardNO">卡号</string>
    <string name="CardName">卡名</string>
    <string name="CardData">出账日</string>
    <string name="CardBack">还款日</string>
    <string name="CardGet">记账日</string>
    <string name="Today">当日</string>
    <string name="NoToday">次日</string>
    <string name="Add">添加</string>
    <string name="Cancle">取消</string>
    <string name="About">关于</string>
    <string name="aboout_title">关于</string>
    <string name="about_message">关于</string>
    <string name="about_button">确定</string>
    <string name="less">天,最后还款</string>
    <string name="benqi">本期还款额</string>
    <string name="last">上期还款额</string>
    <string name="detail">详细</string>
    <string name="payback">还款</string>
    <string name="error_null">请确认您的输入</string>
    <string name="error_title">出错啦</string>
    <string name="title_activity_about">关于</string>
    <string name="delete">删除</string>
    <string name="billname">账单名称</string>
    <string name="bcid">选择卡片</string>
    <string name="bdate">消费日期</string>
    <string name="bcost">消费金额</string>            
    <string name="bt_confirm">确定</string>
    <string name="bt_cancle">取消</string>


</resources>