<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingTop="10sp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40sp"
        android:text="@string/billname" />

   <EditText
        android:id="@+id/etBillname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:ems="10" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="40sp"
       android:layout_marginTop="10sp"
       android:text="@string/bcid" />

   <Spinner
       android:id="@+id/spCardslist"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
   
   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="40sp"
       android:layout_marginTop="10sp"
       android:text="@string/bcost" />

  <EditText
       android:id="@+id/etBcost"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
       android:ems="10"
       android:inputType="numberDecimal" />

  <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="40sp"
       android:layout_marginTop="10sp"
       android:text="@string/bdate" />

  <DatePicker
      android:id="@+id/dpBdate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
	  android:layout_gravity="center_horizontal"/>
    
</LinearLayout>